...
                  ),
                ),
                drawerButton(
                    AppLocalizations.of(context)!.dictionary,
                    PlatformIcons(context).search,
                    "/",
                    const Key("drawerDictionaryButton")),
                const Divider(),
                drawerButton(AppLocalizations.of(context)!.exercise,
                    PlatformIcons(context).volumeUp, "/exercise"),
                const Divider(),
                drawerButton(
                    AppLocalizations.of(context)!.settings,
...
