...
  }

  @override
  Widget build(BuildContext context) {
    final InputMode inputMode = context.watch<InputModeState>().mode;
    final searchBar = SearchBar(
      key: const Key("homePageSearchBar"),
      onChanged: (query) {
        if (query.isEmpty) {
          setState(() {
            queryEmptied = true;
            finishedSearch = false;
            selectedSearchResultEntryPage = null;
...
